feat: expose manifest rendered resources
